--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
-    "rxjs": "^6.0.0",
+    "googlefonts": "^1.1.3",
+    "jquery": "^3.4.1",
+    "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
